Added fadeout to alert

--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
 
                     <!-- Payment Alert Components -->
 
-                    <div class="alert alert-success alert-dismissible fade show mt-3 w-50 mx-auto" role="alert">
+                    <div id="alert" class="alert alert-success alert-dismissible fade show mt-3 w-50 mx-auto" role="alert">
                          Payment <strong>Successful</strong>
                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                    </div>
 
 
-                   <div class="alert alert-danger alert-dismissible fade show mt-3 w-50 mx-auto" role="alert">
+                   <div id="alert" class="alert alert-danger alert-dismissible fade show mt-3 w-50 mx-auto" role="alert">
                     Payment <strong>Not Successful</strong>
                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 
