Corrected  bg-transparency for banner

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <section id="banner" class="container-fluid" style="background-image: url('assets/banner/banner.webp');">
 
-        <header id="header" class="container-md p-3 bg-fhprimary bg-opacity-10 text-bg-primary">
+        <header id="header" class="container-md p-3  bg-transparent text-bg-primary">
 
             <nav class="navbar navbar-expand navbar-dark">
 
